--- a/sleeves_image_task.html
+++ b/sleeves_image_task.html
@@ -67,7 +67,7 @@ background-color: azure;
     </div>
 
 <div class="link">
-  <a href="building_dropdown_task_34.html">Back</a>
+  <a href="index.html">Back</a>
 
 </div>
 
